[tool.poetry]
name = "vhelpers"
version = "0.1.1"
description = "Often used functions in vladimirs-git projects"
authors = ["Vladimir Prusakov <vladimir.prusakovs@gmail.com>"]
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/vladimirs-git/vhelpers"
repository = "https://github.com/vladimirs-git/vhelpers"
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
#    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Natural Language :: English",
]
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
dictdiffer = "^0.9.0"
mypy = "^1.6.1"
pydocstyle = "^6.3.0"
pygments = "^2.16.1"
pylint = "^3.0.1"
pytest-cov = "^4.1.0"
restructuredtext-lint = "^1.4.0"
tabulate = "^0.9.0"

[tool.setuptools.package-data]
vhelpers = ["py.typed"]

[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vladimirs-git/vhelpers/issues"
"Download URL" = "https://github.com/vladimirs-git/vhelpers/archive/refs/tags/0.1.1.tar.gz"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
