[tool.poetry]
name = "vhelpers"
version = "0.6.0"
description = "Often used functions in vladimirs-git projects"
authors = ["Vladimir Prusakov <vladimir.prusakovs@gmail.com>"]
readme = "README.rst"
package-mode = true
license = "MIT"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Natural Language :: English",
]

[tool.poetry.urls]
homepage = "https://github.com/vladimirs-git/vhelpers"
repository = "https://github.com/vladimirs-git/vhelpers"
"Bug Tracker" = "https://github.com/vladimirs-git/vhelpers/issues"

[tool.poetry.extras]
test = ["pytest"]

# FIX: Package docutils (0.21.post1) not found. #9293
[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.8"
#
tomli = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pydocstyle = "^6.3.0"
pygments = "^2.16.1"
pylint = "^3.2.7"
pytest = "^8.3.5"
restructuredtext-lint = "^1.4.0"
ruff = "^0.11.4"
twine= "^6.1.0"

[tool.setuptools.package-data]
vhelpers = ["py.typed"]

[tool.pylint]
max-line-length = 100
disable = "fixme"

[tool.pylint.message_control]
enable = ["too-many-arguments", "too-many-locals"]
max-args = 6
max-locals = 16

[tool.pylint."tests.*"]
disable = [
    "duplicate-code",
    "protected-access",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-public-methods",
    "unsubscriptable-object",
    "unused-import",
    "use-dict-literal",
    "use-implicit-booleaness-not-comparison",
]

[tool.mypy]
python_version = "3.8"
exclude = ["_notes"]

[tool.ruff]
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "_notes",
    "dist",
    "sdist",
    "temp",
    "tmp",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # arguments on separate lines
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "pep257"  # docstring style

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
